--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.0.292"
+pre-commit = "^3.4.0"
 
 [tool.poetry-dynamic-versioning]
 enable = true
