--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,6 @@ enable = true
 [build-system]
 requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
 build-backend = "poetry_dynamic_versioning.backend"
+
+[tool.ruff]
+select = ["ALL"]
