--- a/.github/workflows/release-publish-cd.yaml
+++ b/.github/workflows/release-publish-cd.yaml
@@ -23,7 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip poetry
           poetry config virtualenvs.create false
-          poetry install
+          poetry self install --sync
       - name: Build
         run: poetry build
       - uses: pypa/gh-action-pypi-publish@release/v1
