--- a/.github/workflows/release-publish-cd.yaml
+++ b/.github/workflows/release-publish-cd.yaml
@@ -26,7 +26,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip poetry
           poetry config virtualenvs.create false
-          poetry install --sync
+          poetry install --sync --no-ansi
       - name: Build
         run: poetry build
       - uses: pypa/gh-action-pypi-publish@release/v1
