--- a/.github/workflows/release-publish-cd.yaml
+++ b/.github/workflows/release-publish-cd.yaml
@@ -16,9 +16,6 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          fetch-tags: true
       - uses: actions/setup-python@v2
         with:
           python-version: 3.12
@@ -26,7 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip poetry
           poetry config virtualenvs.create false
-          poetry self install --sync
+          poetry self add "poetry-dynamic-versioning[plugin]"
       - name: Build
         run: poetry build
       - uses: pypa/gh-action-pypi-publish@release/v1
