add: workflow unittest

--- a/.github/workflows/pull-request-ci.yaml
+++ b/.github/workflows/pull-request-ci.yaml
@@ -19,3 +19,5 @@ jobs:
           poetry config virtualenvs.create false
           poetry install
       - uses: chartboost/ruff-action@v1
+      - name: unittest
+        run: poetry run python -m unittest
