--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python = "^3.12"
 ruff = "^0.0.292"
 pre-commit = "^3.4.0"
 jinja2 = "^3.1.2"
+coverage = "^7.3.2"
 
 [tool.poetry-dynamic-versioning]
 enable = true
