--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ ruff = "^0.0.292"
 pre-commit = "^3.4.0"
 jinja2 = "^3.1.2"
 coverage = "^7.3.2"
+sphinx = "^7.2.6"
 
 [tool.poetry-dynamic-versioning]
 enable = true
