--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pre-commit = "^3.4.0"
 jinja2 = "^3.1.2"
 coverage = "^7.3.2"
 sphinx = "^7.2.6"
+sphinx-rtd-theme = "^1.3.0"
 
 [tool.poetry-dynamic-versioning]
 enable = true
@@ -26,10 +27,11 @@ build-backend = "poetry_dynamic_versioning.backend"
 
 [tool.ruff]
 select = ["ALL"]
-ignore = ["FBT", "PT", "S701", "D203", "D212"]
+ignore = ["FBT", "PT", "S701", "D203", "D212", "RUF002"]
 target-version = "py312"
 
 [tool.ruff.per-file-ignores]
 "./charmeleon/table/*.py" = ["RUF001"]
 "./scripts/*.py" = ["INP001"]
 "./tests/**/*.py" = ["S101", "PT009", "RUF001"]
+"./docs/**/*.py" = ["INP001"]
