--- a/.github/workflows/release-publish-cd.yaml
+++ b/.github/workflows/release-publish-cd.yaml
@@ -21,9 +21,8 @@ jobs:
           python-version: 3.12
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip poetry
+          python -m pip install --upgrade pip poetry poetry-dynamic-versioning
           poetry config virtualenvs.create false
-          poetry self add "poetry-dynamic-versioning[plugin]"
       - name: Build
         run: poetry build
       - uses: pypa/gh-action-pypi-publish@release/v1
